--- a/index.html
+++ b/index.html
@@ -21,61 +21,64 @@
   <div class="container">
     <header>
       <h1>Reliable, efficient delivery</h1>
-      <p>Powered by Technology</p>
-      <p>
-        Our Artificial Intelligence powered tools use millions of project data points
-        to ensure that your project is successful
+      <p class="p-darkb-600 p-header-title">Powered by Technology</p>
+      <p class="p-header-desc">
+        Our Artificial Intelligence powered tools use millions of project data <span>points to ensure that your project
+          is
+          successful</span>
       </p>
     </header>
     <main>
+      <div class="main__div">
 
-      <section class="main__section-team">
-        <div class="section__div-texts">
-          <p>Team Builder</p>
-          <p>
-            Scans our talent network to create the optimal team for your project
-          </p>
-        </div>
-        <div class="section__div-svg">
-          <img src="images/icon-team-builder.svg" alt="">
-        </div>
-      </section>
+        <section class="main__section-team">
+          <div class="section__div-texts">
+            <h4 class="p-darkb-600 p-title">Team Builder</h4>
+            <p class="p-text">
+              Scans our talent network to create the <span>optimal team for your project</span>
+            </p>
+          </div>
+          <div class="section__div-svg">
+            <img src="images/icon-team-builder.svg" alt="Team Builder Icon">
+          </div>
+        </section>
 
-      <section class="main__section-supervisor">
-        <div class="section__div-texts">
-          <p>Supervisor</p>
-          <p>
-            Monitors activity to identify project roadblocks
-          </p>
-        </div>
-        <div class="section__div-svg">
-          <img src="images/icon-supervisor.svg" alt="">
-        </div>
-      </section>
+        <section class="main__section-supervisor">
+          <div class="section__div-texts">
+            <h4 class="p-darkb-600 p-title">Supervisor</h4>
+            <p class="p-text">
+              Monitors activity to identify project <span>roadblocks</span>
+            </p>
+          </div>
+          <div class="section__div-svg">
+            <img src="images/icon-supervisor.svg" alt="Supervisor icon-calculator">
+          </div>
+        </section>
 
-      <section class="main__section-karma">
-        <div class="section__div-texts">
-          <p>Karma</p>
-          <p>
-            Regularly evaluates our talent to ensure quality
-          </p>
-        </div>
-        <div class="section__div-svg">
-          <img src="images/icon-karma.svg" alt="">
-        </div>
-      </section>
+        <section class="main__section-karma">
+          <div class="section__div-texts">
+            <h4 class="p-darkb-600 p-title">Karma</h4>
+            <p class="p-text">
+              Regularly evaluates our talent to ensure <span>quality</span>
+            </p>
+          </div>
+          <div class="section__div-svg">
+            <img src="images/icon-karma.svg" alt="">
+          </div>
+        </section>
 
-      <section class="main__section-calculator">
-        <div class="section__div-texts">
-          <p>Calculator</p>
-          <p>
-            Uses data from past projects to provide better delivery estimates
-          </p>
-        </div>
-        <div class="section__div-svg">
-          <img src="images/icon-calculator.svg" alt="">
-        </div>
-      </section>
+        <section class="main__section-calculator">
+          <div class="section__div-texts">
+            <h4 class="p-darkb-600 p-title">Calculator</h4>
+            <p class="p-text">
+              Uses data from past projects to provide <span>better delivery estimates</span>
+            </p>
+          </div>
+          <div class="section__div-svg">
+            <img src="images/icon-calculator.svg" alt="">
+          </div>
+        </section>
+      </div>
 
     </main>
   </div>
