--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="css/body.css">
   <title>Frontend Mentor | Four card feature section</title>
 
 </head>
@@ -83,7 +83,7 @@
   <!-- <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Trevor</a>.
+      Coded by <a href="#">Your Name Here</a>.
     </p>
   </footer> -->
 </body>
